@@ -52,6 +52,10 @@ declare(strict_types=1);
 
 // Work.------------------------------------------------------------------------
 use SimpleComplex\Utils\CliEnvironment;
+use SimpleComplex\Utils\Dependency;
+use SimpleComplex\Config\Config;
+use SimpleComplex\JsonLog\JsonLog;
+use SimpleComplex\Inspect\Inspect;
 
 /**
  * Exposes CLI commands of several packages, if they exist.
@@ -71,6 +75,36 @@ use SimpleComplex\Utils\CliEnvironment;
  */
 function simple_complex_utils_cli()
 {
+    // We know the container is a Dependency in CLI mode.
+    /** @var Dependency $container */
+    $container = Dependency::container();
+    $container->set(
+        'config',
+        function() {
+            return new Config('global');
+        }
+    );
+    $container->set(
+        'logger',
+        function() use ($container)
+        {
+            return new JsonLog($container->get('config'));
+        }
+    );
+    $container->set(
+        'inspect',
+        function() use ($container)
+        {
+            return new Inspect($container->get('config'));
+        }
+    );
+
+    set_exception_handler(function(\Throwable $throwable) use ($container) {
+        $trace = $container->get('inspect')->trace($throwable);
+        $container->get('logger')->error('' . $trace);
+        echo $trace; exit;
+    });
+
     /**
      * @see CliCommandInterface
      *
